fix faq position, overview iframe

--- a/docs/The-ODG-Token.mdx
+++ b/docs/The-ODG-Token.mdx
@@ -2,7 +2,7 @@
 title: The ODG Token
 ---
 
-Initial Total supply: 10,000,000\
+Initial Total supply: 10,000,000
 Contract: [https://arbiscan.io/address/0x000d636bd52bfc1b3a699165ef5aa340bea8939c](https://arbiscan.io/address/0x000d636bd52bfc1b3a699165ef5aa340bea8939c)
 
 ### Overview
