--- a/docs/README.mdx
+++ b/docs/README.mdx
@@ -5,6 +5,8 @@ description: ''
 
 ### Introduction to Open Dollar
 
+<iframe src="https://player.vimeo.com/video/903426360?h=d02b48e9b8" width="640" height="380" frameborder="0" allow="autoplay; fullscreen" allowfullscreen />
+
 Open Dollar is a stablecoin protocol built on Arbitrum designed to help you yield and leverage your assets with safety and predictability.
 
 Liquid staking tokens (LSTs) and other Arbitrum-native assets can be deposited into Non-Fungible Vaults (NFVs) in order to borrow the OD stablecoin with low-interest loans, create leveraged positions, and continue to earn 100% of their staking yield. OD is over-collateralized and pegged to $1.00 with a dynamic incentive system.
