fix spaces, favicon

--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -49,7 +49,8 @@ Claims for the ODG token on our [platform](https://gov.opendollar.com/dao) will 
 
 ### Where can I trade ODG?
 
-Currently, you can trade ODG on the Camelot DEX on Arbitrum: [https://info.camelot.exchange/pair/v3/0xf935263c9950eb2881ff58bd6a76c3d2564a78d5](https://info.camelot.exchange/pair/v3/0xf935263c9950eb2881ff58bd6a76c3d2564a78d5)
+Currently, you can trade ODG on the Camelot DEX on Arbitrum: \
+[https://info.camelot.exchange/pair/v3/0xf935263c9950eb2881ff58bd6a76c3d2564a78d5](https://info.camelot.exchange/pair/v3/0xf935263c9950eb2881ff58bd6a76c3d2564a78d5)
 
 ### How do NFVs (NFT Vaults) work?
 
