fix image and add to sidebars

--- a/docs/Ambassador-Program.mdx
+++ b/docs/Ambassador-Program.mdx
@@ -3,7 +3,8 @@ title: Ambassador Program
 description: Open Dollar Ambassador Program
 ---
 
-![](/img/od-ambassador-program.png)\
+<img src="./img/od-ambassador-program.png" alt="OD Ambassador Program" />
+
 Open Dollar’s Ambassador program is designed to reward the contributions of our most dedicated, DeFi veteran community members who assist with content creation, community education, and engagement.
 
 This program is by application only with limited slots available.
