--- a/docs/Proposals-and-Voting.mdx
+++ b/docs/Proposals-and-Voting.mdx
@@ -4,10 +4,10 @@ title: Proposals and Voting
 
 ### Governance Dashboard
 
-The Open Dollar DAO can be accessed on [https://gov.opendollar.com/dao](https://gov.opendollar.com/dao).\
+The Open Dollar DAO can be accessed on [https://gov.opendollar.com/dao](https://gov.opendollar.com/dao).
 
 
-On this dashboard ODG token holders can create proposals, vote on active proposals, become a delegate, and delegate their ODG to other DAO members to perform governance functions on their behalf.\
+On this dashboard ODG token holders can create proposals, vote on active proposals, become a delegate, and delegate their ODG to other DAO members to perform governance functions on their behalf.
 
 
 The Open Dollar DAO on-chain voting and governance platform is designed [in partnership](https://tally.mirror.xyz/bcBZfDynm9r53jnnrKcCNpfe6x3PC_r-7T94l_u_Fyg) with and  powered by [Tally.xyz](https://tally.xyz/). 
@@ -20,38 +20,38 @@ For help, please visit [our Discord](https://www.opendollar.com/discord).
 
 Discussions related to Open Dollar DAO governance can be found on: [https://commonwealth.im/open-dollar-governance/overview](https://commonwealth.im/open-dollar-governance/overview)
 
-\
+
 This official forum is dedicated to discussions, proposals, debates, and exchange of ideas related to Open Dollar governance. It is recommended that all upcoming proposals be shared here in advance for open discussion, voter context, and constructive feedback that can help the DAO reach a consensus and achieve the desired outcomes.
 
-Please read the pinned posts for the [rules](https://commonwealth.im/open-dollar-governance/discussion/15191-welcome-to-the-open-dollar-dao-forum) and [proposal guidelines](https://commonwealth.im/open-dollar-governance/discussion/15192-how-to-submit-a-dao-proposal).\
+Please read the pinned posts for the [rules](https://commonwealth.im/open-dollar-governance/discussion/15191-welcome-to-the-open-dollar-dao-forum) and [proposal guidelines](https://commonwealth.im/open-dollar-governance/discussion/15192-how-to-submit-a-dao-proposal).
 
 
 ### Governance Parameters
 
-Voting Delay: 1 day\
+Voting Delay: 1 day
 
 
-From the time the proposal is live there is a 24hr delay before voting occurs. This is to give voters and delegates adequate time to prepare.\
+From the time the proposal is live there is a 24hr delay before voting occurs. This is to give voters and delegates adequate time to prepare.
 
 
 Voting Period: 7 days
 
-After the voting delay, votes are counted for 7 days, giving ample time for all DAO members to participate.\
+After the voting delay, votes are counted for 7 days, giving ample time for all DAO members to participate.
 
 
-Proposal Threshold: 10,000 votes\
+Proposal Threshold: 10,000 votes
 
 
-10,000 votes is the minimum required voting power to create a proposal. This is designed to be high enough to filter spam yet low enough to be accessible either independently or by delegation.\
+10,000 votes is the minimum required voting power to create a proposal. This is designed to be high enough to filter spam yet low enough to be accessible either independently or by delegation.
 
 
-Quorum: 0.2%\
+Quorum: 0.2%
 
 
-0.2% of the total token supply at the time of the proposal is the minimum number of votes required for a proposal to be valid. ”No” votes do not count towards quorum.\
+0.2% of the total token supply at the time of the proposal is the minimum number of votes required for a proposal to be valid. ”No” votes do not count towards quorum.
 
 
-The exact number of tokens for quorum and the proposal threshold can also be found on the [delegates](https://gov.opendollar.com/dao/delegates) page.\
+The exact number of tokens for quorum and the proposal threshold can also be found on the [delegates](https://gov.opendollar.com/dao/delegates) page.
 
 
 ### DAO Official Links
