--- a/docs/Proposals-and-Voting.mdx
+++ b/docs/Proposals-and-Voting.mdx
@@ -4,7 +4,7 @@ title: Proposals and Voting
 
 ### Governance Dashboard
 
-![](</img/Dao Dashboard.png>)
+<img src="./img/Dao Dashboard.png" alt="Governance Dashboard Screenshot" />
 
 The Open Dollar DAO can be accessed on [https://gov.opendollar.com/dao](https://gov.opendollar.com/dao).
 
@@ -18,7 +18,7 @@ For help, please visit [our Discord](https://www.opendollar.com/discord).
 
 ### Governance Forum
 
-![](/img/sadasdadad.png)
+<img src="./img/sadasdadad.png" alt="Governance Forum Screenshot" />
 
 Discussions related to Open Dollar DAO governance can be found on: [https://commonwealth.im/open-dollar-governance/overview](https://commonwealth.im/open-dollar-governance/overview)
 
