--- a/docs/api/api-endpoints.mdx
+++ b/docs/api/api-endpoints.mdx
@@ -9,8 +9,9 @@ title: API Endpoints
 ### Graph Protocol Subgraphs
 
 * Arbitrum: Coming soon
-* Arbitrum Sepolia: [https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8](https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8)&#x20;
+* Arbitrum Sepolia: [https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8](https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8)
+
 
 The subgraph documentation is available in our [od-subgraph](https://github.com/open-dollar/od-subgraph) repository
 
-![](/assets/selection_436.png)
+<img src="/img/selection-436.png" alt="The Graph screenshot" />
