--- a/docs/geb-js/api-reference/README.mdx
+++ b/docs/geb-js/api-reference/README.mdx
@@ -8,5 +8,5 @@ Detailed documentation of public classes of the geb.js library.
 
 ### Overview
 
-![](/assets/geb_overview_1.png)
+<img src="./img/geb_overview_1.png" alt="GEB Overview" />
 
