--- a/docs/testnet-guide.mdx
+++ b/docs/testnet-guide.mdx
@@ -5,7 +5,7 @@ description: A guide for using the Open Dollar testnet application.
 
 # Testnet App Walkthrough
 
-\<div style="padding:56.25% 0 0 0;position\:relative;">\<iframe src="[https://player.vimeo.com/video/923541743?badge=0\&amp;autopause=0\&amp;player\_id=0\&amp;app\_id=58479](https://player.vimeo.com/video/923541743?badge=0\&amp;autopause=0\&amp;player_id=0\&amp;app_id=58479)" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position\:absolute;top:0;left:0;width:100%;height:100%;" title="Open Dollar Testnet Walkthrough">\</iframe>\</div>\<script src="[https://player.vimeo.com/api/player.js">\</script](https://player.vimeo.com/api/player.js%22%3E%3C/script)>
+<iframe src="https://player.vimeo.com/video/923541743" width="640" height="380" frameborder="0" allow="autoplay; fullscreen" allowfullscreen />
 
 ## Getting Test Tokens
 
@@ -18,7 +18,7 @@ description: A guide for using the Open Dollar testnet application.
 
 1. Navigate back to [https://app.dev.opendollar.com](https://app.dev.opendollar.com) in your browser.
 2. Connect your wallet by clicking the "Connect Wallet" button.
-3. Add the "Arbitrum Sepolia" testnet to your wallet & switch networks. [https://chainlist.org/?search=arbitrum+sepolia\&testnets=true](https://chainlist.org)
+3. Add the "Arbitrum Sepolia" testnet to your wallet & switch networks. [https://chainlist.org/?search=arbitrum+sepolia&testnets=true](https://chainlist.org)
 4. Click "Create Vault Facilitator" and complete the transaction.
 
 ## Creating a Vault
@@ -37,8 +37,10 @@ Once your NFV is minted, you can view it in your Metamask wallet by adding the c
 1. Open Metamask and select the NFT tab.
 2. Click "Import NFT".
 3. Input the contract address: 0x677Bd90AB6A27552D0744a0Af196DA127f014656
-4. Input the Token ID, which is your your vault number without the "#" symbol. You can also find your Token ID from your vault creation transaction. \
-   ![](/img/VaultID.png)  
+4. Input the Token ID, which is your your vault number without the "#" symbol. You can also find your Token ID from your vault creation transaction.
+
+<img src="./img/VaultID.png" alt="Vault ID" />
+
 5. Click "Import".
 
 ## More Vault Functions
