Ch.31 Docs Updates: Deploy to prod (#94)
* TinaCMS content update

* TinaCMS content update

* remove slashes

* TinaCMS content update

* Update from TinaCMS

* TinaCMS content update

* TinaCMS content update

* Update from TinaCMS

* TinaCMS content update

* Update from TinaCMS

* TinaCMS content update

* Update from TinaCMS

* TinaCMS content update

* Update from TinaCMS

* TinaCMS content update

* fix docs (#93)

* TinaCMS content update

---------

Co-authored-by: tina-cloud-app[bot] <58178390+tina-cloud-app[bot]@users.noreply.github.com>

--- a/docs/testnet-guide.mdx
+++ b/docs/testnet-guide.mdx
@@ -5,22 +5,21 @@ description: A guide for using the Open Dollar testnet application.
 
 # Testnet App Walkthrough
 
-[https://www.youtube.com/watch?v=HutnkLydeWw](https://www.youtube.com/watch?v=HutnkLydeWw)
+<iframe src="https://player.vimeo.com/video/923541743" width="640" height="380" frameborder="0" allow="autoplay; fullscreen" allowfullscreen />
 
 ## Getting Test Tokens
 
-1. Begin by navigating to [https://opendollar.com/testnet](https://opendollar.com/testnet) in your browser.
-2. Click the Discord icon in the menu bar or Discord link on the page to join our server.
+1. Begin by navigating to [https://app.dev.opendollar.com](https://app.dev.opendollar.com) in your browser.
+2. Click the Test tokens button in the top right menu bar and click the Discord link to join our the Open Dollar server.
 3. In the server, click the "🤖｜open-bot" channel, type "/claim", and paste your wallet address.
 4. After a few seconds you will see a message confirming the deposit of the tokens.
 
 ## Connecting to the App
 
-1. Navigate back to [https://opendollar.com/testnet](https://opendollar.com/testnet) in your browser.
-2. Click the blue button on top of the page "Launch Testnet" leading to the app page [https://app.dev.opendollar.com](https://app.dev.opendollar.com/)
-3. Connect your wallet by clicking the "Connect Wallet" button.
-4. Add the "Arbitrum Sepolia" testnet to your wallet & switch networks. [https://chainlist.org/?search=arbitrum+sepolia\&testnets=true](https://chainlist.org)
-5. Click "Create Vault Facilitator" and complete the transaction.
+1. Navigate back to [https://app.dev.opendollar.com](https://app.dev.opendollar.com) in your browser.
+2. Connect your wallet by clicking the "Connect Wallet" button.
+3. Add the "Arbitrum Sepolia" testnet to your wallet & switch networks. [https://chainlist.org/?search=arbitrum+sepolia&testnets=true](https://chainlist.org)
+4. Click "Create Vault Facilitator" and complete the transaction.
 
 ## Creating a Vault
 
@@ -38,7 +37,10 @@ Once your NFV is minted, you can view it in your Metamask wallet by adding the c
 1. Open Metamask and select the NFT tab.
 2. Click "Import NFT".
 3. Input the contract address: 0x677Bd90AB6A27552D0744a0Af196DA127f014656
-4. Input the Token ID, which is your your vault number without the "#" symbol.
+4. Input the Token ID, which is your your vault number without the "#" symbol. You can also find your Token ID from your vault creation transaction.
+
+<img src="./img/VaultID.png" alt="Vault ID" />
+
 5. Click "Import".
 
 ## More Vault Functions
