--- a/docs/Tokenomics.mdx
+++ b/docs/Tokenomics.mdx
@@ -6,7 +6,7 @@ title: Tokenomics
 
 ### Platform fees and revenue
 
-50% of the fees from the Open Dollar protocol go directly to the DAO controlled treasury. The other 50% are used to purchase ODG at auction, continually acruing value to the ODG token. Of the ODG purchased, 50% will be allocated to the treasury for use in grants, incentives, and community distributions, while 50% will be burned forever.
+50% of the fees from the Open Dollar protocol go directly to the DAO controlled treasury. The other 50% are used to purchase ODG at auction, continually accruing value to the ODG token. Of the ODG purchased, 50% will be allocated to the treasury for use in grants, incentives, and community distributions, while 50% will be burned forever.
 
 <img src="./img/Platform fees and revenue.png" alt="Platform fees and revenue" />
 
