escaped dollar signs and fix typos

--- a/docs/How-OD-Stays-Stable.mdx
+++ b/docs/How-OD-Stays-Stable.mdx
@@ -2,7 +2,7 @@
 title: How OD Stays Stable
 ---
 
-If the price of OD deviates from its $1.00 peg, the PID Controller adjusts the redemption rate upwards or downwards in order to incentivize vault managers to restore it.
+If the price of OD deviates from its \$1.00 peg, the PID Controller adjusts the redemption rate upwards or downwards in order to incentivize vault managers to restore it.
 
 The following are two scenarios and how this works:
 
