--- a/docs/risk/geb-risks.mdx
+++ b/docs/risk/geb-risks.mdx
@@ -4,7 +4,7 @@ title: GEB Risks
 
 # Protocol Risks
 
-Using Open Dollar and its associated assets doesn't come without risk. Before you decide to deposit your assets in the protocol or acquire the $OD stablecoin asset, you should do your research and understand the risks involved.
+Using Open Dollar and its associated assets doesn't come without risk. Before you decide to deposit your assets in the protocol or acquire the \$OD stablecoin asset, you should do your research and understand the risks involved.
 
 This section will only give an overview of the main risks associated with GEB. If you'd like to dive deeper, you can check out every [module](/system-contracts/core) in the System Contracts section.
 
