--- a/docs/Leverage.mdx
+++ b/docs/Leverage.mdx
@@ -3,7 +3,7 @@ title: Leverage
 description: A case study on leveraging a vault with Open Dollar
 ---
 
-![](/img/od-leveraging-yields.png)
+<img src="./img/od-leveraging-yields.png" alt="Leverage Case Study" />
 
 Leveraging a vault position involves using borrowed funds to purchase more of the collateral asset with the goal of increasing yields. This process can be repeated a number of times until the desired values are reached. With each step of leverage, a number of key values change, usually in the same direction after step 1.
 
