--- a/docs/Leverage.mdx
+++ b/docs/Leverage.mdx
@@ -7,7 +7,7 @@ description: A case study on leveraging a vault with Open Dollar
 
 Leveraging a vault position involves using borrowed funds to purchase more of the collateral asset with the goal of increasing yields. This process can be repeated a number of times until the desired values are reached. With each step of leverage, a number of key values change, usually in the same direction after step 1.
 
-Below is a case study of the leverage process using a position of wstETH on Open Dollar, the recent average value of wstETH at the time of writing (\$4,000) and it’s [historical](https://dune.com/queries/570874/4069098) average APY, both of which fluctuate. The user’s objective in this scenario is to maximize their yield while maintaining a collateralization ratio of at least 140%.
+Below is a case study of the leverage process using a position of wstETH on Open Dollar, the recent average value of wstETH at the time of writing (\$4,000) and its [historical](https://dune.com/queries/570874/4069098) average APY, both of which fluctuate. The user’s objective in this scenario is to maximize their yield while maintaining a collateralization ratio of at least 140%.
 
 **Disclaimer:** This is not financial advice.
 
