--- a/docs/Official-Links.mdx
+++ b/docs/Official-Links.mdx
@@ -30,6 +30,7 @@ Quick access to everything you need to know about Open Dollar.
 * [Discord](https://discord.com/invite/UbTUfuGBrS) 💬
 * [Blog](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9) ✍️
 * [Telegram Announcements](https://t.me/open_dollar) 📢
+* [Farcaster](https://warpcast.com/open-dollar) 🗣️
 * [Governance Forum](https://commonwealth.im/open-dollar-governance/discussions) 💬
 * [LinkedIn](https://www.linkedin.com/company/opendollar) 🗣️
 * [Vimeo](https://vimeo.com/user214116325) 📺
