--- a/docs/Proposals-and-Voting.mdx
+++ b/docs/Proposals-and-Voting.mdx
@@ -28,13 +28,13 @@ Please read the pinned posts for the [rules](https://commonwealth.im/open-dollar
 
 ### Governance Parameters
 
-Voting Delay: 12 hours
+Voting Delay: 1 day
 
-From the time the proposal is live there is a 12hr delay before voting occurs. This is to give voters and delegates adequate time to prepare.
+From the time the proposal is live there is a 1 day delay before voting occurs. This is to give voters and delegates adequate time to prepare.
 
-Voting Period: 3 days
+Voting Period: 2 days
 
-After the voting delay, votes are counted for 3 days, giving ample time for all DAO members to participate. As soon as it’s over, the proposal can be passed.
+After the voting delay, votes are counted for 2 days, giving ample time for all DAO members to participate. As soon as it’s over, the proposal can be passed.
 
 Proposal Threshold: 10,000 votes
 
