--- a/docs/Proposals-and-Voting.mdx
+++ b/docs/Proposals-and-Voting.mdx
@@ -36,6 +36,10 @@ Voting Period: 2 days
 
 After the voting delay, votes are counted for 2 days, giving ample time for all DAO members to participate. As soon as it’s over, the proposal can be passed.
 
+Timelock Delay: 1 day
+
+After a proposal is passed, there is a 1 day delay before it can be executed.
+
 Proposal Threshold: 10,000 votes
 
 10,000 votes is the minimum required voting power to create a proposal. This is designed to be high enough to filter spam yet low enough to be accessible either independently or by delegation.
