--- a/docs/Proposals-and-Voting.mdx
+++ b/docs/Proposals-and-Voting.mdx
@@ -20,7 +20,7 @@ For help, please visit [our Discord](https://www.opendollar.com/discord).
 
 <img src="./img/sadasdadad.png" alt="Governance Forum Screenshot" />
 
-Discussions related to Open Dollar DAO governance can be found on: [https://commonwealth.im/open-dollar-governance/overview](https://commonwealth.im/open-dollar-governance/overview)
+Discussions related to Open Dollar DAO governance can be found on: [https://forum.opendollar.com/](https://forum.opendollar.com/)
 
 This official forum is dedicated to discussions, proposals, debates, and exchange of ideas related to Open Dollar governance. It is recommended that all upcoming proposals be shared here in advance for open discussion, voter context, and constructive feedback that can help the DAO reach a consensus and achieve the desired outcomes.
 
