--- a/docs/Proposals-and-Voting.mdx
+++ b/docs/Proposals-and-Voting.mdx
@@ -36,9 +36,11 @@ Voting Period: 2 days
 
 After the voting delay, votes are counted for 2 days, giving ample time for all DAO members to participate. As soon as it’s over, the proposal can be passed.
 
-Timelock Delay: 1 day
+Timelock Delay: 0 days at launch. 1 Day after launch
 
-After a proposal is passed, there is a 1 day delay before it can be executed.
+After the first proposal is passed, there is no delay before it can be executed so we can increase the debt ceiling to launch Open Dollar immediately and have the flexibility to make necessary changes quickly. 
+
+One of the first proposals we expect to make after launch is an increase in the timelock delay to 1 day, to increase security.
 
 Proposal Threshold: 10,000 votes
 
