--- a/docs/Official-Links.mdx
+++ b/docs/Official-Links.mdx
@@ -33,6 +33,7 @@ Quick access to everything you need to know about Open Dollar.
 * [Farcaster](https://warpcast.com/open-dollar) 🗣️
 * [Governance Forum](https://forum.opendollar.com/) 💬
 * [LinkedIn](https://www.linkedin.com/company/opendollar) 🗣️
+* [Dune](https://dune.com/whale_hunter/open-dollar-governance) 📈
 * [Vimeo](https://vimeo.com/user214116325) 📺
 * [Guild.xyz](https://guild.xyz/opendollar) 🏟️
 * [Galxe](https://galxe.com/opendollar) 🎯
