--- a/docs/community-resources.mdx
+++ b/docs/community-resources.mdx
@@ -13,10 +13,24 @@ description: List of talks and articles about RAI and Reflexer
 
 ### Articles 
 
-* [What is Ungovernance](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9/hOuSqMOx6rtkLV5pY1KcM4B0k_7UmEDRnE8D91N6jLA) October 2023
-* [How OD Makes Every Token Count](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9/Eu51D-5NlJQNSQwOc4twxOT8H_kCoPEJrV_UQrSw6wY) September 2023
-* [How OD Stays Stable](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9/bpgJSu4JIMS3HYspKahU9CK3o6KwgYk7f-e7kVfrPbE) September 2023
-* [A primer on NFVs](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9/eHkUevK2ssPvwOTweAQBTO5nWxVN_io0FJ8AOPFW7H8) September 2023
+* [What is Ungovernance](https://www.opendollar.com/blog/what-is-ungovernance-and-why-does-it-matter) October 2023
+* [How OD Makes Every Token Count](https://www.opendollar.com/blog/how-open-dollar-makes-every-token-count) September 2023
+* [How OD Stays Stable](https://www.opendollar.com/blog/control-pegged-stablecoin-mechanics-how-od-stays-stable) September 2023
+* [A primer on NFVs](https://www.opendollar.com/blog/a-primer-on-nfvs-and-how-non-fungible-vaults-improve-cdps) September 2023
+* [Why We Need Overcollateralized Stablecoins](https://www.opendollar.com/blog/why-we-need-overcollateralized-stablecoins) November 2023
+* [Understanding LSTs & CDPs](https://www.opendollar.com/blog/understanding-liquid-staking-tokens-lsts-collateralized-debt-positions-cdps) November 2023
+* [The Arbitrum Ecosystem: Innovating on DeFi](https://www.opendollar.com/blog/the-arbitrum-ecosystem-innovating-on-defi) December 2023
+* [Driving Forces of Growth in Stablecoin Markets](https://www.opendollar.com/blog/driving-forces-of-growth-in-stablecoin-markets) December 2023
+* [Stablecoins as Liquidity: Amalgamation](https://www.opendollar.com/blog/stablecoins-as-liquidity-amalgamation) December 2023
+* [Open Dollar's Alignment with the Arbitrum Constitution](https://www.opendollar.com/blog/open-dollars-alignment-with-the-arbitrum-constitution) December 2023
+* [The ODG Token Launch](https://www.opendollar.com/blog/the-odg-token-launch) January 2024
+* [Popular Liquid Staking Tokens on Arbitrum](https://www.opendollar.com/blog/popular-liquid-staking-tokens-on-arbitrum) January 2024
+* [Why Non-Fungible Vaults are a Game-changer for DeFi](https://www.opendollar.com/blog/why-non-fungible-vaults-are-a-game-changer-for-defi) February 2024
+* [Bridging to Arbitrum: A Comprehensive Guide](https://www.opendollar.com/blog/bridging-to-arbitrum-a-comprehensive-guide) February 2024
+* [The Open Dollar Roadmap](https://www.opendollar.com/blog/the-open-dollar-roadmap) March 2024
+* [How to Leverage your Yield - Case Study](https://www.opendollar.com/blog/how-to-leverage-your-yield---case-study) April 2024
+
+
 
 
 
