--- a/docs/What-is-OD.mdx
+++ b/docs/What-is-OD.mdx
@@ -6,6 +6,8 @@ title: What is OD?
 
 OD is Open Dollar’s robust and over-collateralized stablecoin backed by LSTs. Its \$1.00 floating peg is maintained by the protocol’s algorithm which adjusts it’s redemption rate by repricing debt, incentivizing vault managers to take actions to restore its value.
 
+Read more on our [blog](https://www.opendollar.com/blog/control-pegged-stablecoin-mechanics-how-od-stays-stable).
+
 ### Features
 
 * Stable Value: Pegged to \$1.00 for consistency and predictability in transactions.
