--- a/docs/How-OD-Stays-Stable.mdx
+++ b/docs/How-OD-Stays-Stable.mdx
@@ -28,4 +28,4 @@ In both scenarios, the process continues until the deviation between the market 
 Note: Open Dollar doesn't change the amount of OD you hold. It only changes the target price that the protocol wants
 OD to have on exchanges. Therefore, it is not a rebase token, but rather a stablecoin with a floating redemption price.
 
-For more details and a simplified example, [see our blog article](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9/bpgJSu4JIMS3HYspKahU9CK3o6KwgYk7f-e7kVfrPbE).
+For more details and a simplified example, [see our blog article](https://www.opendollar.com/blog/control-pegged-stablecoin-mechanics-how-od-stays-stable).
