--- a/docs/Governance-introduction.mdx
+++ b/docs/Governance-introduction.mdx
@@ -17,4 +17,4 @@ Open Dollar’s protocol is non-ungradable and the DAO cannot upgrade the code i
 
 This approach aims to establish robust security guarantees for platform users and prevent undue influence over the system's operation.
 
-Read more about Ungovernance and it’s benefits [on our blog](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9/hOuSqMOx6rtkLV5pY1KcM4B0k_7UmEDRnE8D91N6jLA).
+Read more about Ungovernance and it’s benefits [on our blog](https://www.opendollar.com/blog/what-is-ungovernance-and-why-does-it-matter).
