--- a/docs/NFT-Vaults-Overview.mdx
+++ b/docs/NFT-Vaults-Overview.mdx
@@ -24,4 +24,4 @@ On Open Dollar, vaults are represented as NFTs, making each vault distinct and t
 * Improved Treasury and Risk Management: Contributes to enhanced treasury management, risk assessment, and performance tracking.
 * Security Benefits: Integrates into compliance and escrow services for enhanced protection against bad actors.
 
-[Learn more](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9/eHkUevK2ssPvwOTweAQBTO5nWxVN_io0FJ8AOPFW7H8) about NFVs and their benefits on our blog.
+[Learn more](https://www.opendollar.com/blog/a-primer-on-nfvs-and-how-non-fungible-vaults-improve-cdps) about NFVs and their benefits on our blog.
