--- a/docs/Official-Links.mdx
+++ b/docs/Official-Links.mdx
@@ -28,7 +28,7 @@ Quick access to everything you need to know about Open Dollar.
 
 * [Twitter](https://twitter.com/open_dollar) 🐦
 * [Discord](https://discord.com/invite/UbTUfuGBrS) 💬
-* [Blog](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9) ✍️
+* [Blog](https://www.opendollar.com/blog) ✍️
 * [Telegram Announcements](https://t.me/open_dollar) 📢
 * [Farcaster](https://warpcast.com/open-dollar) 🗣️
 * [Governance Forum](https://forum.opendollar.com/) 💬
