--- a/docs/PID-Controller.mdx
+++ b/docs/PID-Controller.mdx
@@ -14,3 +14,5 @@ Its functions are similar to a thermostat in a home, constantly adjusting to mai
 4. User Interaction with Fluctuations: Regular DeFi users interact with these fluctuations when they create vaults, borrow OD, or sell their NFVs. Market makers and bot builders, with a deeper understanding of the protocol, are better positioned to leverage these arbitrage opportunities to support the stability of OD's peg.
 
 The PID controller's functions in Open Dollar are a sophisticated yet automated response to market dynamics to maintain its peg.
+
+Read more on our [blog](https://www.opendollar.com/blog/control-pegged-stablecoin-mechanics-how-od-stays-stable).
