--- a/docs/Protocol-Risks.mdx
+++ b/docs/Protocol-Risks.mdx
@@ -12,7 +12,7 @@ You can also check the original [whitepaper](https://github.com/reflexer-labs/w
 
 ### Smart Contracts
 
-* The core GEB contracts were audited by [OpenZeppelin](https://github.com/reflexer-labs/geb-audits/tree/master/open-zeppelin/core-contracts). Other helper contracts were audited by [Quantstamp](https://github.com/reflexer-labs/geb-audits/tree/master/quantstamp/helper-contracts). Open Dollar’s changes and additions to this base protocol and those concerning NFVs have been audited by [Code4rena](https://code4rena.com/contests/2023-10-open-dollar). While thorough audits are necessary and assist in improving the security of a protocol, contract risk can never be entirely ruled out.
+* The core GEB contracts were audited by [OpenZeppelin](https://github.com/reflexer-labs/geb-audits/tree/master/open-zeppelin/core-contracts). Other helper contracts were audited by [Quantstamp](https://github.com/reflexer-labs/geb-audits/tree/master/quantstamp/helper-contracts). Open Dollar’s changes and additions to this base protocol and those concerning NFVs have been audited by [Code4rena](https://code4rena.com/contests/2023-10-open-dollar). Additional audites have been carried out by [Pessimistic](https://pessimistic.io/) and [Pashov Audit Group](https://www.pashov.net/). While thorough audits are necessary and assist in improving the security of a protocol, contract risk can never be entirely ruled out.
 
 ### Admin Keys
 
