--- a/docs/The-ODG-Token.mdx
+++ b/docs/The-ODG-Token.mdx
@@ -12,3 +12,5 @@ The ODG token is the governance token of the Open Dollar protocol. It grants hol
 ODG holders can create proposals, vote, or delegate their voting power to delegates of their choice to steer governance on their behalf.
 
 New ODG tokens can NOT be minted by the DAO, the team, or anyone else. New ODG can only be minted by the protocol autonomously in cases of emergency, when there is bad debt that needs to be settled. Check out the developer docs on the Debt Auction House for more info.
+
+Read more on our [blog](https://www.opendollar.com/blog/the-odg-token-launch).
