--- a/docs/Official-Links.mdx
+++ b/docs/Official-Links.mdx
@@ -29,6 +29,7 @@ Quick access to everything you need to know about Open Dollar.
 * [Twitter](https://twitter.com/open_dollar) 🐦
 * [Discord](https://discord.com/invite/UbTUfuGBrS) 💬
 * [Blog](https://www.opendollar.com/blog) ✍️
+* [Roadmap](https://www.notion.so/opendollar/d276e9d464d6478cacf86c2d75e21982?v=24d2ad15c92c4a3895c6066bfac2e303) 🛣️
 * [Telegram Announcements](https://t.me/open_dollar) 📢
 * [Farcaster](https://warpcast.com/open-dollar) 🗣️
 * [Governance Forum](https://forum.opendollar.com/) 💬
