Update Official Links (#105)
* TinaCMS content update

* escaped dollar signs and fix typos (#100)

* TinaCMS content update

* TinaCMS content update

* TinaCMS content update

* Update from TinaCMS

* TinaCMS content update

* Update from TinaCMS

* TinaCMS content update

* TinaCMS content update

* TinaCMS content update

* TinaCMS content update

* TinaCMS content update

* Update sidebars.js

* Update Leverage.mdx (#103)

* escape dollar signs

* TinaCMS content update

* Update Tokenomics.mdx

* escape dollar signs

* typo

* Update Official-Links.mdx

* TinaCMS content update

* Update Proposals-and-Voting.mdx

* Update Proposals-and-Voting.mdx

* Update from TinaCMS

* TinaCMS content update

* Update from TinaCMS

* TinaCMS content update

* Update Audits.mdx

* Update Official-Links.mdx

* Update Proposals-and-Voting.mdx

* Update Proposals-and-Voting.mdx

* Update Official-Links.mdx

* Update community-resources.mdx

* Update What-is-OD.mdx

* Update How-OD-Stays-Stable.mdx

* Update Governance-introduction.mdx

* Update NFT-Vaults-Overview.mdx

* Update Official-Links.mdx

* Update PID-Controller.mdx

* Update Security-Measures-.mdx

* Update Protocol-Risks.mdx

* Update The-ODG-Token.mdx

* Update Official-Links.mdx

---------

Co-authored-by: tina-cloud-app[bot] <58178390+tina-cloud-app[bot]@users.noreply.github.com>
Co-authored-by: Jacob Habib <47253537+jahabeebs@users.noreply.github.com>
Co-authored-by: jahabeebs <jahgoreds@gmail.com>

--- a/docs/Audits.mdx
+++ b/docs/Audits.mdx
@@ -4,6 +4,10 @@ title: Audits
 
 The core GEB contracts were audited by [OpenZeppelin](https://github.com/reflexer-labs/geb-audits/tree/master/open-zeppelin/core-contracts). Other helper contracts were audited by [Quantstamp](https://github.com/reflexer-labs/geb-audits/tree/master/quantstamp/helper-contracts).
 
-Open Dollar’s changes and additions to this base protocol and those concerning NFVs have been audited by [Code4rena](https://code4rena.com/contests/2023-10-open-dollar).
+Open Dollar’s changes and additions to this base protocol and those concerning NFVs have been audited by [Code4rena](https://code4rena.com/contests/2023-10-open-dollar).\
+\
+The Open Dollar protocol has also been audited by:
 
-Further auditing is planned prior to mainnet launch.
+[Pessimistic](https://pessimistic.io/)
+
+[Pashov Audit Group](https://www.pashov.net/)
