--- a/docs/Official-Links.mdx
+++ b/docs/Official-Links.mdx
@@ -28,10 +28,13 @@ Quick access to everything you need to know about Open Dollar.
 
 * [Twitter](https://twitter.com/open_dollar) 🐦
 * [Discord](https://discord.com/invite/UbTUfuGBrS) 💬
-* [Blog](https://mirror.xyz/0x8a81CEeb0a12998616F1aB932cDbc941F0d539E9) ✍️
+* [Blog](https://www.opendollar.com/blog) ✍️
+* [Roadmap](https://www.notion.so/opendollar/d276e9d464d6478cacf86c2d75e21982?v=24d2ad15c92c4a3895c6066bfac2e303) 🛣️
 * [Telegram Announcements](https://t.me/open_dollar) 📢
-* [Governance Forum](https://commonwealth.im/open-dollar-governance/discussions) 💬
+* [Farcaster](https://warpcast.com/open-dollar) 🗣️
+* [Governance Forum](https://forum.opendollar.com/) 💬
 * [LinkedIn](https://www.linkedin.com/company/opendollar) 🗣️
+* [Dune](https://dune.com/whale_hunter/open-dollar-governance) 📈
 * [Vimeo](https://vimeo.com/user214116325) 📺
 * [Guild.xyz](https://guild.xyz/opendollar) 🏟️
 * [Galxe](https://galxe.com/opendollar) 🎯
