--- a/docs/Proposals-and-Voting.mdx
+++ b/docs/Proposals-and-Voting.mdx
@@ -20,7 +20,7 @@ For help, please visit [our Discord](https://www.opendollar.com/discord).
 
 <img src="./img/sadasdadad.png" alt="Governance Forum Screenshot" />
 
-Discussions related to Open Dollar DAO governance can be found on: [https://commonwealth.im/open-dollar-governance/overview](https://commonwealth.im/open-dollar-governance/overview)
+Discussions related to Open Dollar DAO governance can be found on: [https://forum.opendollar.com/](https://forum.opendollar.com/)
 
 This official forum is dedicated to discussions, proposals, debates, and exchange of ideas related to Open Dollar governance. It is recommended that all upcoming proposals be shared here in advance for open discussion, voter context, and constructive feedback that can help the DAO reach a consensus and achieve the desired outcomes.
 
@@ -28,13 +28,19 @@ Please read the pinned posts for the [rules](https://commonwealth.im/open-dollar
 
 ### Governance Parameters
 
-Voting Delay: 12 hours
+Voting Delay: 1 day
 
-From the time the proposal is live there is a 12hr delay before voting occurs. This is to give voters and delegates adequate time to prepare.
+From the time the proposal is live there is a 1 day delay before voting occurs. This is to give voters and delegates adequate time to prepare.
 
-Voting Period: 3 days
+Voting Period: 2 days
 
-After the voting delay, votes are counted for 3 days, giving ample time for all DAO members to participate. As soon as it’s over, the proposal can be passed.
+After the voting delay, votes are counted for 2 days, giving ample time for all DAO members to participate. As soon as it’s over, the proposal can be passed.
+
+Timelock Delay: 0 days at launch. 1 Day after launch
+
+After the first proposal is passed, there is no delay before it can be executed so we can increase the debt ceiling to launch Open Dollar immediately and have the flexibility to make necessary changes quickly. 
+
+One of the first proposals we expect to make after launch is an increase in the timelock delay to 1 day, to increase security.
 
 Proposal Threshold: 10,000 votes
 
