--- a/docs/Adding-Liquidity-for-OD-or-ODG.mdx
+++ b/docs/Adding-Liquidity-for-OD-or-ODG.mdx
@@ -21,14 +21,14 @@ description: Guide to Adding Liquidity for OD or ODG on Camelot DEX
 
 ### Step 2: Navigate to Liquidity Management
 
-![Liquidity Navigation](</img/Untitled (50).png>)
+<img src="./img/Untitled (50).png" alt="Liquidity Navigation" />
 
 * Select “Trade” at the top menu and then click on "Liquidity" from the drop down.
 * Go to the liquidity management page by clicking on "Add Liquidity."\\
 
 ### Step 3: Choosing the Liquidity Range
 
-![Liquidity Range](</img/Untitled (51).png>)
+<img src="./img/Untitled (51).png" alt="Liquidity Range" />
 
 * Select the ODG/ETH or OD/ETH pair.
 * This range should be selected based on your expectations of the price movement and your comfort with the market's volatility.
