--- a/docs/Liquidations.mdx
+++ b/docs/Liquidations.mdx
@@ -3,7 +3,7 @@ title: Liquidations
 description: ''
 ---
 
-![RETH Vault](</img/RETH Vault.png>)\
+<img src="./img/RETH Vault.png" alt="RETH Vault" />
 **Overview**
 
 If the value of the collateral in a vault falls below the minimum collateral ratio liquidation can occur. This process protects the protocol from insolvency risks.
