--- a/docs/testnet-guide.mdx
+++ b/docs/testnet-guide.mdx
@@ -50,10 +50,10 @@ You can also view your NFVs on the OpenSea marketplace.
 1. Navigate to the [OpenSea](https://opensea.io/) website.
 2. Click on your "Profile" in the top menu 
 
-![OpenSea Profile](</img/OpenSea Profile.png>)\
+<img src="./img/OpenSea Profile.png" alt="OpenSea Profile" />
 3\. When you mint an NFV you'll be able to see it in your account page as seen in the image below.
 
-![OpenSea NFV](</img/OpenSea NFV.png>)
+<img src="./img/OpenSea NFV.png" alt="OpenSea NFV" />
 
 4\. You can also view existing NFVs from other users on the [Open Dollar Vaults](https://opensea.io/collection/open-dollar-vaults) collection page.
 
