--- a/docs/What-is-OD.mdx
+++ b/docs/What-is-OD.mdx
@@ -2,6 +2,8 @@
 title: What is OD?
 ---
 
+Contract: https://arbiscan.io/token/0x221A0f68770658C15B525d0F89F5da2baAB5f321
+
 ### Overview
 
 OD is Open Dollar’s robust and over-collateralized stablecoin backed by LSTs. Its \$1.00 floating peg is maintained by the protocol’s algorithm which adjusts it’s redemption rate by repricing debt, incentivizing vault managers to take actions to restore its value.
