--- a/docs/Borrowing.mdx
+++ b/docs/Borrowing.mdx
@@ -9,7 +9,8 @@ The first time you connect your wallet to the Open Dollar app you’ll be prompt
 
 Click “Create a Vault” and select your collateral type and amount to deposit.
 
-![Creating a Vault](</img/Creating a Vault.png>)\
+<img src="./img/Creating a Vault.png" alt="Creating a Vault" />
+
 \
 Once you’ve created a vault, the amount of OD you can borrow depends on the Minimum Collateral Ratio (MCR) of your deposited assets.
 
