--- a/docs/Liquidations.mdx
+++ b/docs/Liquidations.mdx
@@ -3,7 +3,7 @@ title: Liquidations
 description: ''
 ---
 
-![Elevated Risk Vault](</img/Elevated Risk Vault.png>)\
+<img src="./img/Elevated Risk Vault.png" alt="Elevated Risk Vault" />
 \
 **Overview**
 
