--- a/docs/DebtAuctions.mdx
+++ b/docs/DebtAuctions.mdx
@@ -2,7 +2,7 @@
 title: "Debt\_Auctions"
 ---
 
-![Debt Auctions](</img/Debt Auction.png>)\
+<img src="./img/Debt Auction.png" alt="Debt Auction" />
 \
 Debt auctions mint and auction new ODG in exchange for OD. The OD that is received by an auction will be used to eliminate bad (uncovered) debt from the system.
 
