--- a/docs/CollateralAuctions.mdx
+++ b/docs/CollateralAuctions.mdx
@@ -2,7 +2,7 @@
 title: "Collateral\_Auctions"
 ---
 
-![Collateral Auctions](</img/Collateral Auction.png>)
+<img src="./img/Collateral Auction.png" alt="Collateral Auction" />
 
 Collateral auctions are meant to sell collateral that was seized from a vault in exchange for OD. The OD that is received by an auction is burned.
 
