--- a/docs/Surplus-Auctions.mdx
+++ b/docs/Surplus-Auctions.mdx
@@ -2,7 +2,7 @@
 title: Surplus Auctions
 ---
 
-![Surplus Auctions](</img/Surplus Auction.png>)\
+<img src="./img/Surplus Auction.png" alt="Surplus Auction" />
 \
 Surplus auctions sell OD that has accrued inside the protocol in exchange for ODG. The ODG that is received by an auction is burned.
 
