fix protocol fees image

--- a/docs/Tokenomics.mdx
+++ b/docs/Tokenomics.mdx
@@ -8,7 +8,7 @@ title: Tokenomics
 
 50% of the fees from the Open Dollar protocol go directly to the DAO controlled treasury. The other 50% are used to purchase ODG at auction, continually accruing value to the ODG token. Of the ODG purchased, 50% will be allocated to the treasury for use in grants, incentives, and community distributions, while 50% will be burned forever.
 
-![OD Protocol Fees](</img/OD Protocol Fees.png>)
+<img src="./img/OD Protocol Fees.png" alt="OD Protocol Fees" />
 
 ### **Cap Table + Vesting Details**
 
