--- a/docs/How-OD-Stays-Stable.mdx
+++ b/docs/How-OD-Stays-Stable.mdx
@@ -15,7 +15,7 @@ Since OD is now cheaper inside the protocol compared to the market, borrowing po
 
 Example: If the redemption price of OD decreases by 0.2%, users can leverage their collateral to borrow 0.2% more OD from Open Dollar. They then sell their OD at market price, earning a profit from the price deviation, and protecting themselves from a drop in the token’s value following the negative redemption rate.
 
-<img src="./img/How OD stays stable Image 3.png" alt="How OD stays stable Image 3" />
+<img src="./img/How OD stays Stable Image 3.png" alt="How OD stays stable Image 3" />
 
 <img src="./img/How OD stays Stable Image 4.png" alt="How OD stays Stable Image 4" />
 
