--- a/docs/Leverage.mdx
+++ b/docs/Leverage.mdx
@@ -51,7 +51,7 @@ In the second step of leverage, the same process is repeated: The user borrows t
 * Liquidation Threshold: $1,967.21 per wstETH
 * Net APY: 6.61% ($2,644)
 
-With the position now leveraged to a multiple of 2.44x, the net APY of 6.61%(\\$2,644) is an increase of 73.95% of the original of 3.8%($1,520), inclusive of borrowing fees. Note that the liquidation threshold has also risen and the collateralization ratio has dropped relative to the previous step.
+With the position now leveraged to a multiple of 2.44x, the net APY of 6.61%(\$2,644) is an increase of 73.95% of the original of 3.8%($1,520), inclusive of borrowing fees. Note that the liquidation threshold has also risen and the collateralization ratio has dropped relative to the previous step.
 
 
 ## The Trend
@@ -101,7 +101,7 @@ In the third step of leverage, the same process is repeated: 
 * Liquidation Threshold: $2,341.74 per wstETH
 * Net APY: 8.41% ($3,364)
 
-In the final step, the user reaches their target collateralization ratio with a leveraged position of 3.36x more wstETH collateral than their original amount of 10 wstETH. They now have nearly $118,080 in wstETH and a 121.32% greater net yield of 8.41% ($3,364) versus their original yield of only 3.8% (\\$1,520), inclusive of the 1.85% APR borrowing fees.
+In the final step, the user reaches their target collateralization ratio with a leveraged position of 3.36x more wstETH collateral than their original amount of 10 wstETH. They now have nearly $118,080 in wstETH and a 121.32% greater net yield of 8.41% ($3,364) versus their original yield of only 3.8% (\$1,520), inclusive of the 1.85% APR borrowing fees.
 
 
 The liquidation threshold is now at $2,341.74, or roughly 41.5% less than the market price of wstETH when they began. Depending on the risk tolerance and yield goals of the user, they could continue, but in this scenario, they have reached their target and are comfortable with these values.
