--- a/docs/Liquidations.mdx
+++ b/docs/Liquidations.mdx
@@ -11,4 +11,4 @@ If the value of the collateral in a vault falls below the minimum collateral rat
 
 During liquidations, a vault's collateral is lost as it is used to pay off the account's debt. The vault owner will no longer be able to retrieve the collateral by repaying debt. The liquidation penalty varies by collateral type and can be referenced when opening the vault.\
 \
-There is a max liquidation limit set by the protocol of 100,000 OD, for liquidations of vaults with larger values there will be multiple rounds of liquidation.
+There is a max liquidation limit set by the protocol of 100,000 OD for liquidations of vaults with larger values there will be multiple rounds of liquidation.
