--- a/docs/Mainnet-App-Guide.mdx
+++ b/docs/Mainnet-App-Guide.mdx
@@ -4,9 +4,8 @@ title: Mainnet App Guide
 
 # Mainnet App Guide
 
-\<iframe src="[https://player.vimeo.com/video/941409534?h=b6e51ff5fa](https://player.vimeo.com/video/941409534?h=b6e51ff5fa)" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen>\</iframe>
+<iframe src="https://player.vimeo.com/video/941409534?h=b6e51ff5fa" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 
-\
 Connecting to the App
 ---------------------
 
