--- a/docs/Tokenomics.mdx
+++ b/docs/Tokenomics.mdx
@@ -10,6 +10,8 @@ title: Tokenomics
 
 <img src="./img/OD Protocol Fees.png" alt="OD Protocol Fees" />
 
+*assuming 2% APR and one year loan
+
 ### **Cap Table + Vesting Details**
 
 | Category                        | Initial Percent | Lockup                               |
