--- a/docs/Audits.mdx
+++ b/docs/Audits.mdx
@@ -2,16 +2,14 @@
 title: Audits
 ---
 
-Last updated: 05/07/24\
+Last updated: 07/01/24\
 \
 The core GEB contracts were audited by [OpenZeppelin](https://github.com/reflexer-labs/geb-audits/tree/master/open-zeppelin/core-contracts).\
 \
 The Open Dollar protocol has also been audited by:\
 \
-[Code4rena\
-](https://code4rena.com/contests/2023-10-open-dollar)\
-[Quantstamp](https://certificate.quantstamp.com/full/open-dollar-smart-contract-audit/202828fa-eb09-4d33-beab-c1ebee11ebd1/index.html)
+[<img src="./img/code4rena.png" alt="code4rena" />](https://code4rena.com/contests/2023-10-open-dollar)\
+[<img src="./img/quantstamp.png" alt="quantstamp" />](https://certificate.quantstamp.com/full/open-dollar-smart-contract-audit/202828fa-eb09-4d33-beab-c1ebee11ebd1/index.html)
 
-[Pashov Audit Group\
-](https://www.pashov.net/)\
-In addition to a semi-automated security scan followed by manual verification by [Pessimistic](https://pessimistic.io/)
+[<img src="./img/pashov-audit-group.png" alt="pashov-audit-group" />](https://www.pashov.net/)\
+In addition to a semi-automated security scan followed by manual verification by [<img src="./img/pessimistic.png" alt="pessimistic" />](https://pessimistic.io/)
