--- a/docs/api/api-endpoints.mdx
+++ b/docs/api/api-endpoints.mdx
@@ -8,9 +8,8 @@ title: API Endpoints
 
 ### Graph Protocol Subgraphs
 
-* Arbitrum: Coming soon
-* Arbitrum Sepolia: [https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8](https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8)
-
+- Arbitrum: Coming soon
+- Arbitrum Sepolia: [https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8](https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8)
 
 The subgraph documentation is available in our [od-subgraph](https://github.com/open-dollar/od-subgraph) repository
 
