--- a/docs/How-OD-Stays-Stable.mdx
+++ b/docs/How-OD-Stays-Stable.mdx
@@ -2,11 +2,12 @@
 title: How OD Stays Stable
 ---
 
-If the price of OD deviates from its \$1.00 peg, the PID Controller adjusts the redemption rate upwards or downwards in order to incentivize vault managers to restore it.
+If the price of OD deviates from its $1.00 peg, the PID Controller adjusts the redemption rate upwards or downwards in order to incentivize vault managers to restore it.
 
 The following are two scenarios and how this works:
 
 <img src="./img/How OD stays stable Image 1.png" alt="How OD stays stable Image 1" />
+
 <img src="./img/How OD stays Stable Image 2.png" alt="How OD stays Stable Image 2" />
 
 If the market price is greater than the redemption price, the redemption rate turns negative. A negative redemption rate lowers the redemption price.
